--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -22,6 +22,8 @@ jobs:
       - name: check diff 
         id: diff
         run: |-
+          set -e
+          git diff
           export DIFF=$(git diff-index HEAD --quiet || echo 1 )
           echo ::set-output name=build-diff::$DIFF
       - name: docs
